prestashop_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prestashop-svc
spec:
  selector:
    app: prestashop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
