prestashop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prestashop-ingress
spec:
  rules:
  - host: prestashop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prestashop
            port:
              number: 80
